force-app/main/default/objects/cart_event_items_MCPProd__dll/fields/cartEventId__c.field-meta.xml
<CustomField>
    <fullName>cartEventId__c</fullName>
    <label>Cart Event Id</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>cartEventId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>