force-app/main/default/objects/cart_event_items_MCPProd__dll/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <label>Event Date</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>EventDate</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>